# ndio-tiff

./: CMakeLists.txt  config.h.in
cmake/: mylib-config.cmake  nd-config.cmake
doc/: CMakeLists.txt
src/: ndio-tiff.c
test/: CMakeLists.txt  helpers.cc  helpers.h  io.cc
test/data/: savestack.m  test1.tif  test2.tif
